<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.account.MyProfileActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/personal_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bio_text_view"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/account_credentials"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/profile_picture_image_view">

                    <TextView
                        android:id="@+id/username_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="Username"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/email_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="Email"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/username_text_view"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/profile_picture_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="142dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/profile"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/profile_picture_content_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/bio_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Bio"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personal_data"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bio_text_view"
                app:layout_constraintBottom_toTopOf="@id/delete_account_button"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/update_account"
                app:icon="@drawable/ic_edit"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/danger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_account_button"
                app:layout_constraintBottom_toTopOf="@id/badges_header_text_view"
                android:layout_marginHorizontal="8dp"
                android:text="@string/delete_account"
                app:icon="@drawable/ic_delete"/>

            <TextView
                android:id="@+id/badges_header_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/delete_account_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/badges_recycler_view"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/badges_header_text"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/badges_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/badges_header_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/score_header_text_view"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:spanCount="2"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"/>

            <TextView
                android:id="@+id/score_header_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/badges_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/language_spinner"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/score_header_text"/>

            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/score_header_text_view"
                app:layout_constraintBottom_toTopOf="@id/score_recycler_view"
                android:layout_marginHorizontal="8dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/score_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language_spinner"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/blue"
        android:tint="@android:color/white"
        app:tint="@color/danger"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/favorite_button_description" />

</androidx.constraintlayout.widget.ConstraintLayout>