...
    <string name="tab_icon_search_title">Search word</string>
    <string name="tab_icon_synchro_title">Get resources</string>
    <string name="search_button_text">Search</string>
    <string name="search_edit_text_hint">Search something</string>
    <string name="tab_icon_login_title">Login</string>
    <string name="tab_icon_logout_title">Logout</string>
    <string name="sp_file_name">MySharedPref</string>
    <string name="is_syncing_sp">is_syncing</string>
    <string name="username_sp">username</string>
    <string name="email_sp">email</string>
    <string name="token_sp">token</string>
    <string name="picture_sp">picture</string>
    <string name="bio_sp">bio</string>
...
    <string name="your_email_hint">Your email</string>
    <string name="logo_content_description">Logo</string>
    <string name="loading_content_description">Loading</string>
    <string name="default_label_text">Default label</string>
    <string name="fulfilled_requirement_content_description">Fulfilled</string>
    <string name="hint_edit_text_account_search">Search an account</string>
    <string name="search_account_button">Search account</string>
    <string name="account_picture_content_description">Account picture</string>
    <string name="account_username">Username: %1$s</string>
    <string name="account_email">Email: %1$s</string>
    <string name="account_bio">Bio: %1$s</string>
    <string name="game_image_view_content_description">Game</string>
    <string name="language_image_view_content_description">Language flag</string>
    <string name="icon_heart_content_description">Icon heart</string>
    <string name="bio_label">Bio</string>

    <string name="warning_outdated_data">A data update attempt failed, so this page may be outdated.</string>
...
